welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
in1020:-6: error: Missing closing brace `}' assumed here
try {
^in1020:1: error: expected class or object definition
var c :Boolean=false
^in1020:2: error: expected class or object definition
def in1020(a:Int, b:Int):Boolean = {
^